removed a useless - nay, worse than useless! - div from project display. Also encountered and squashed a bug where changing the screen size while in one of the inner pages of the project section made cards at the start/end of the array seemingly vanish from their homes while leaving the lights on

--- a/src/App.css
+++ b/src/App.css
@@ -61,10 +61,16 @@
 }
 
 .projects {
+  display: flex;
+  flex-direction: column;
   background-color: rgb(138, 28, 0);
   height: 100vh;
   padding: 25px;
   color: white;
+}
+.projects h2 {
+  font-size: 2em;
+  margin: auto;
 }
 
 .contact {
