--- a/src/features/project_card/ProjectCard.module.css
+++ b/src/features/project_card/ProjectCard.module.css
@@ -5,4 +5,5 @@
   padding: 10px;
   max-height: 80vh;
   overflow: auto;
+  font-size: 1.5em;
 }
